@@ -1,3 +1,8 @@
+2006-07-26  Chong Yidong  <cyd@stupidchicken.com>
+
+	* subr.el (sit-for): Use new SECONDS arg of read-event instead of
+	a timer.
+
 2006-07-26  Mathias Dahl  <mathias.dahl@gmail.com>
 
 	* tumme.el (tumme-backward-image): Add prefix argument. Add error
